--- a/prime/index.html
+++ b/prime/index.html
@@ -1,6 +1,9 @@
 ---
 layout: html
-
+use_pug: true
+index: false
+title: Home
+description: A theme development project.
 ---
 <!DOCTYPE html>
 <html class="_prime_layout" lang="en-US"><!-- path   : prime/index.html -->
@@ -20,7 +23,7 @@ layout: html
           <div class="container-lg px-3 my-5 markdown-body">
             <header class="_header">
               <div class="_layout">
-                <h1>{% include dove_logo.html %}</h1>
+                <h1>{% include logo.html %}</h1>
               </div>
             </header>
             <nav class="_nav">
@@ -63,7 +66,11 @@ layout: html
               </article>
             </main>
             <footer class="_footer footer mt-5">
-              <div class="_layout">{% include footer.md %}
+              <div class="_layout">{% capture footer %}{% include footer.md %}{% endcapture %}{{ footer | markdownify }}
+                <hr class="thin border-gray-light"/>
+                <p class="text-right text-gray"><small>
+                    This site is open source.
+                    <a href="https://github.com/techie-joe/dove/edit/main/_source/prime/index.html.pug">Improve this page</a>.</small></p>
               </div>
             </footer>
           </div>
