--- a/prime/legacy.html
+++ b/prime/legacy.html
@@ -1,6 +1,9 @@
 ---
 layout: html
-
+use_pug: true
+index: false
+title: Legacy
+description: A theme development project.
 ---
 <!DOCTYPE html>
 <html class="_prime_layout" lang="en-US"><!-- path   : prime/legacy.html -->
@@ -20,7 +23,7 @@ layout: html
           <div class="container-lg px-3 my-5 markdown-body">
             <header class="_header">
               <div class="_layout">
-                <h1>{% include dove_logo.html %}</h1>
+                <h1>{% include logo.html %}</h1>
               </div>
             </header>
             <nav class="_nav">
