--- a/prime/404.html
+++ b/prime/404.html
@@ -23,7 +23,7 @@ description: The content you are looking for is not here.
           <div class="container-lg px-3 my-5 markdown-body">
             <header class="_header">
               <div class="_layout">
-                <h1>{% include logo.html %}</h1>
+                <h1>{% include dove_logo.html %}</h1>
               </div>
             </header>
             <nav class="_nav">
@@ -38,8 +38,7 @@ description: The content you are looking for is not here.
 <i class="_icon"><i class="itext">&bull;</i></i>
 
 <a href="/dove/prime/">Home</a>
-<a href="/dove/prime/page.html">Page</a>
-<a href="/dove/prime/404.html">404</a>
+<a href="/dove/prime/page.html">Page</a> <b>404</b>
                 </p>
                 <hr class="thin border-gray-light"/>
               </div>
