--- a/prime/index.html
+++ b/prime/index.html
@@ -23,7 +23,7 @@ description: A theme development project.
           <div class="container-lg px-3 my-5 markdown-body">
             <header class="_header">
               <div class="_layout">
-                <h1>{% include logo.html %}</h1>
+                <h1>{% include dove_logo.html %}</h1>
               </div>
             </header>
             <nav class="_nav">
@@ -36,8 +36,7 @@ description: A theme development project.
 
 <a href="/dove/prime/preview.html">Preview</a>
 <i class="_icon"><i class="itext">&bull;</i></i>
-
-<a href="/dove/prime/">Home</a>
+ <b>Home</b>
 <a href="/dove/prime/page.html">Page</a>
 <a href="/dove/prime/404.html">404</a>
                 </p>
