--- a/prime/preview.html
+++ b/prime/preview.html
@@ -23,7 +23,7 @@ description: A theme development project.
           <div class="container-lg px-3 my-5 markdown-body">
             <header class="_header">
               <div class="_layout">
-                <h1>{% include logo.html %}</h1>
+                <h1>{% include dove_logo.html %}</h1>
               </div>
             </header>
             <nav class="_nav">
@@ -33,8 +33,7 @@ description: A theme development project.
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
                       </svg></i></i>
-
-<a href="/dove/prime/preview.html">Preview</a>
+ <b>Preview</b>
 <i class="_icon"><i class="itext">&bull;</i></i>
 
 <a href="/dove/prime/">Home</a>
