--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ description: A theme development project.
                       </nav>
                     </div>
                   </div>
-                  <hr class="thin border-gray-light"/>{% capture pages %}{% include_relative dove_pages.md %}{% endcapture %}{% capture posts %}{% include posts.md %}{% endcapture %}
+                  <hr class="thin border-gray-light"/>{% capture pages %}{% include_relative _dove_pages.md %}{% endcapture %}{% capture posts %}{% include posts.md %}{% endcapture %}
                   <div class="flex" style="gap:3rem;margin:1rem auto 1rem auto">
                     <div id="pages_" style="min-width:250px">
                       <h3 class="mt-0">Pages</h3>{{ pages | markdownify }}
@@ -172,7 +172,7 @@ description: A theme development project.
                     </div>
                   </div>
                   <hr class="thin border-gray-light"/>
-                  <h3>Configurations</h3>{% capture config %}{% include_relative config.md %}{% endcapture %}{{ config | markdownify }}
+                  <h3>Configurations</h3>{% capture config %}{% include_relative _config.md %}{% endcapture %}{{ config | markdownify }}
                 </div>
               </article>
             </main>
