update dove test

--- a/prime/404.html
+++ b/prime/404.html
@@ -28,7 +28,8 @@ description: The content you are looking for is not here.
             </header>
             <nav class="_nav">
               <div class="_layout">
-                <p><b>Prime</b>
+                <p>
+<a href="/dove/prime/"><b>Prime</b></a>
 <i class="_icon"><i class="isvg">
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
@@ -37,10 +38,10 @@ description: The content you are looking for is not here.
 <a href="/dove/prime/preview.html">Preview</a>
 <i class="_icon"><i class="itext">&bull;</i></i>
 
-<a href="/dove/prime/">Home</a>
+<a href="/dove/prime/home.html">Home</a>
 <a href="/dove/prime/page.html">Page</a> <b>404</b>
                 </p>
-                <hr class="thin border-gray-light"/>
+                <hr class="thin"/>
               </div>
             </nav>
             <main class="_main">
@@ -59,7 +60,7 @@ description: The content you are looking for is not here.
             </main>
             <footer class="_footer footer mt-5">
               <div class="_layout">{% capture footer %}{% include footer.md %}{% endcapture %}{{ footer | markdownify }}
-                <hr class="thin border-gray-light"/>
+                <hr class="thin"/>
                 <p class="text-right text-gray"><small>
                     This site is open source.
                     <a href="https://github.com/techie-joe/dove/edit/main/_source/prime/404.html.pug">Improve this page</a>.</small></p>
