--- a/prime/home.html
+++ b/prime/home.html
@@ -28,7 +28,8 @@ description: A theme development project.
             </header>
             <nav class="_nav">
               <div class="_layout">
-                <p><b>Prime</b>
+                <p>
+<a href="/dove/prime/"><b>Prime</b></a>
 <i class="_icon"><i class="isvg">
                       <svg viewBox="0 0 24 24">
                         <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
@@ -36,12 +37,11 @@ description: A theme development project.
 
 <a href="/dove/prime/preview.html">Preview</a>
 <i class="_icon"><i class="itext">&bull;</i></i>
-
-<a href="/dove/prime/">Home</a>
+ <b>Home</b>
 <a href="/dove/prime/page.html">Page</a>
 <a href="/dove/prime/404.html">404</a>
                 </p>
-                <hr class="thin border-gray-light"/>
+                <hr class="thin"/>
               </div>
             </nav>
             <main class="_main">
@@ -67,7 +67,7 @@ description: A theme development project.
             </main>
             <footer class="_footer footer mt-5">
               <div class="_layout">{% capture footer %}{% include footer.md %}{% endcapture %}{{ footer | markdownify }}
-                <hr class="thin border-gray-light"/>
+                <hr class="thin"/>
                 <p class="text-right text-gray"><small>
                     This site is open source.
                     <a href="https://github.com/techie-joe/dove/edit/main/_source/prime/home.html.pug">Improve this page</a>.</small></p>
