--- a/core/preview.html
+++ b/core/preview.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
     <meta id="_theme_color" name="theme-color" content="#222"/>
-    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?r=2511.03.5339"/><!-- layout_head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
+    <link id="_style" rel="stylesheet" href="/dove/assets/core/css/style.css?r=2511.03.4425"/><!-- layout_head --><!--[if lt IE 9]><script src="https://unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"></script><![endif]-->
   </head>
   <body>
     <div class="_views">
@@ -21,7 +21,8 @@
           </header>
           <nav class="_nav">
             <div class="_layout _960">
-              <div><b>Core</b>
+              <div>
+<a href="/dove/core/"><b>Core</b></a>
 <i class="_icon"><i class="isvg">
                     <svg viewBox="0 0 24 24">
                       <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
@@ -29,7 +30,7 @@
  <b>Preview</b>
 <i class="_icon"><i class="itext">&bull;</i></i>
 
-<a href="/dove/core/">Home</a>
+<a href="/dove/core/home.html">Home</a>
 <a href="/dove/core/page.html">Page</a>
 <a href="/dove/core/404.html">404</a>
               </div>
@@ -481,7 +482,7 @@ with 2 space or 4 space indentation. <a href="#fnref:3" class="reversefootnote" 
       <div class="_copyright"><span class="_copyright_text">@ by Techie Joe 2025</span></div>
       <div class="_credit"><a class="_credit_link" href="https://techie-joe.github.io/dove">✨ Made with Dove</a></div>
       <script>window.ghost='bG9jYWxob3N0LGxvY2FsaG9zdDo0MDAwLHRlY2hpZS1qb2UuZ2l0aHViLmlv';</script>
-      <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?r=2511.03.5339"></script>
+      <script type="text/javascript" src="/dove/assets/themejs/themejs_v2.0.js?r=2511.03.4425"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
       <script>anchors?.add();</script>
     </div>
