--- a/index.html
+++ b/index.html
@@ -42,12 +42,13 @@ description: A theme development project.
             <main class="_main">
               <article class="_article">
                 <div class="_layout">
-                  <div class="flex" style="gap:3rem;margin:1rem auto 1rem auto">
-                    <div class="f" style="min-width:350px">
-                      <h3 class="mt-0">Html</h3>
+                  <div class="flex" style="gap:3rem">
+                    <div class="fill">
+                      <h3 class="mt-0">Themes</h3>
                       <nav>
                         <ul class="rapat">
-                          <li><b>Core</b>
+                          <li>
+<a href="/dove/core/"><b>Core</b></a>
 <i class="_icon"><i class="isvg">
                                 <svg viewBox="0 0 24 24">
                                   <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
@@ -56,11 +57,12 @@ description: A theme development project.
 <a href="/dove/core/preview.html">Preview</a>
 <i class="_icon"><i class="itext">&bull;</i></i>
 
-<a href="/dove/core/">Home</a>
+<a href="/dove/core/home.html">Home</a>
 <a href="/dove/core/page.html">Page</a>
 <a href="/dove/core/404.html">404</a>
                           </li>
-                          <li><b>Mallet</b>
+                          <li>
+<a href="/dove/mallet/"><b>Mallet</b></a>
 <i class="_icon"><i class="isvg">
                                 <svg viewBox="0 0 24 24">
                                   <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
@@ -69,11 +71,12 @@ description: A theme development project.
 <a href="/dove/mallet/preview.html">Preview</a>
 <i class="_icon"><i class="itext">&bull;</i></i>
 
-<a href="/dove/mallet/">Home</a>
+<a href="/dove/mallet/home.html">Home</a>
 <a href="/dove/mallet/page.html">Page</a>
 <a href="/dove/mallet/404.html">404</a>
                           </li>
-                          <li><b>Nova</b>
+                          <li>
+<a href="/dove/nova/"><b>Nova</b></a>
 <i class="_icon"><i class="isvg">
                                 <svg viewBox="0 0 24 24">
                                   <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
@@ -82,11 +85,12 @@ description: A theme development project.
 <a href="/dove/nova/preview.html">Preview</a>
 <i class="_icon"><i class="itext">&bull;</i></i>
 
-<a href="/dove/nova/">Home</a>
+<a href="/dove/nova/home.html">Home</a>
 <a href="/dove/nova/page.html">Page</a>
 <a href="/dove/nova/404.html">404</a>
                           </li>
-                          <li><b>Prime</b>
+                          <li>
+<a href="/dove/prime/"><b>Prime</b></a>
 <i class="_icon"><i class="isvg">
                                 <svg viewBox="0 0 24 24">
                                   <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
@@ -95,66 +99,7 @@ description: A theme development project.
 <a href="/dove/prime/preview.html">Preview</a>
 <i class="_icon"><i class="itext">&bull;</i></i>
 
-<a href="/dove/prime/">Home</a>
-<a href="/dove/prime/page.html">Page</a>
-<a href="/dove/prime/404.html">404</a>
-                          </li>
-                        </ul>
-                      </nav>
-                    </div>
-                    <div class="f" style="min-width:350px">
-                      <h3 class="mt-0">Markdown</h3>
-                      <nav>
-                        <ul class="rapat">
-                          <li><b>Core</b>
-<i class="_icon"><i class="isvg">
-                                <svg viewBox="0 0 24 24">
-                                  <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                                </svg></i></i>
-
-<a href="/dove/core/preview.html">Preview</a>
-<i class="_icon"><i class="itext">&bull;</i></i>
-
-<a href="/dove/core/">Home</a>
-<a href="/dove/core/page.html">Page</a>
-<a href="/dove/core/404.html">404</a>
-                          </li>
-                          <li><b>Mallet</b>
-<i class="_icon"><i class="isvg">
-                                <svg viewBox="0 0 24 24">
-                                  <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                                </svg></i></i>
-
-<a href="/dove/mallet/preview.html">Preview</a>
-<i class="_icon"><i class="itext">&bull;</i></i>
-
-<a href="/dove/mallet/">Home</a>
-<a href="/dove/mallet/page.html">Page</a>
-<a href="/dove/mallet/404.html">404</a>
-                          </li>
-                          <li><b>Nova</b>
-<i class="_icon"><i class="isvg">
-                                <svg viewBox="0 0 24 24">
-                                  <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                                </svg></i></i>
-
-<a href="/dove/nova/preview.html">Preview</a>
-<i class="_icon"><i class="itext">&bull;</i></i>
-
-<a href="/dove/nova/">Home</a>
-<a href="/dove/nova/page.html">Page</a>
-<a href="/dove/nova/404.html">404</a>
-                          </li>
-                          <li><b>Prime</b>
-<i class="_icon"><i class="isvg">
-                                <svg viewBox="0 0 24 24">
-                                  <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                                </svg></i></i>
-
-<a href="/dove/prime/preview.html">Preview</a>
-<i class="_icon"><i class="itext">&bull;</i></i>
-
-<a href="/dove/prime/">Home</a>
+<a href="/dove/prime/home.html">Home</a>
 <a href="/dove/prime/page.html">Page</a>
 <a href="/dove/prime/404.html">404</a>
                           </li>
@@ -162,23 +107,23 @@ description: A theme development project.
                       </nav>
                     </div>
                   </div>
-                  <hr class="thin border-gray-light"/>{% capture pages %}{% include_relative _dove_pages.md %}{% endcapture %}{% capture posts %}{% include posts.md %}{% endcapture %}
-                  <div class="flex" style="gap:3rem;margin:1rem auto 1rem auto">
+                  <hr class="thin"/>{% capture pages %}{% include_relative _dove_pages.md %}{% endcapture %}{% capture posts %}{% include posts.md %}{% endcapture %}
+                  <div class="flex" style="gap:3rem">
                     <div id="pages_" style="min-width:250px">
-                      <h3 class="mt-0">Pages</h3>{{ pages | markdownify }}
+                      <h3>Pages</h3>{{ pages | markdownify }}
                     </div>
                     <div id="posts_" style="min-width:150px">
-                      <h3 class="mt-0">Posts</h3>{{ posts | markdownify }}
+                      <h3>Posts</h3>{{ posts | markdownify }}
                     </div>
                   </div>
-                  <hr class="thin border-gray-light"/>
+                  <hr class="thin"/>
                   <h3>Configurations</h3>{% capture config %}{% include_relative _config.md %}{% endcapture %}{{ config | markdownify }}
                 </div>
               </article>
             </main>
             <footer class="_footer footer mt-5">
               <div class="_layout">{% capture footer %}{% include dove_footer.md %}{% endcapture %}{{ footer | markdownify }}
-                <hr class="thin border-gray-light"/>
+                <hr class="thin"/>
                 <p class="text-right text-gray"><small>
                     This site is open source.
                     <a href="https://github.com/techie-joe/dove/edit/main/_source/index.html.pug">Improve this page</a>.</small></p>
