--- a/prime/404.html
+++ b/prime/404.html
@@ -54,7 +54,7 @@ description: The content you are looking for is not here.
                       <p>The content you are looking for is not here.</p>
                     </div>
                   </div><div style="margin-top:3rem"></div>
-                  <hr/>{% include nav_common.html %}
+                  <hr class="thin"/>{% include nav_common.html %}
                 </div>
               </article>
             </main>
