--- a/prime/index.html
+++ b/prime/index.html
@@ -2,7 +2,7 @@
 layout: html
 use_pug: true
 index: false
-title: Index
+title: Prime
 description: A theme development project.
 ---
 <!DOCTYPE html>
@@ -47,7 +47,7 @@ description: A theme development project.
             <main class="_main">
               <article class="_article">
                 <div class="_layout">
-                  <p><code>// content for : Index</code></p>
+                  <p><code>// content for : Prime</code></p>
                 </div>
               </article>
             </main>
