--- a/core/home.html
+++ b/core/home.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html class="_core_layout" lang="en-US"><!-- path   : core/404.html -->
+<html class="_core_layout" lang="en-US"><!-- path   : core/index.html -->
   <!-- layout : dove/_source/_layouts/core -->
   <head>
     <meta charset="utf-8"/><!-- Begin Jekyll SEO tag v2.8.0 -->
-    <title>Not found | Dove</title><!-- End Jekyll SEO tag -->
+    <title>Home | Dove</title><!-- End Jekyll SEO tag -->
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta id="_color_scheme" name="color-scheme" content="light dark"/>
@@ -21,8 +21,7 @@
           </header>
           <nav class="_nav">
             <div class="_layout _960">
-              <div>
-<a href="/dove/core/"><b>Core</b></a>
+              <div> <b><b>Core</b></b>
 <i class="_icon"><i class="isvg">
                     <svg viewBox="0 0 24 24">
                       <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
@@ -32,23 +31,49 @@
 <i class="_icon"><i class="itext">&bull;</i></i>
 
 <a href="/dove/core/home.html">Home</a>
-<a href="/dove/core/page.html">Page</a> <b>404</b>
+<a href="/dove/core/page.html">Page</a>
+<a href="/dove/core/404.html">404</a>
               </div>
             </div>
           </nav>
           <main class="_main">
             <article class="_article _layout _960">
-              <div class="flex" style="margin:1rem auto 3rem auto">
-                <div class="fit" style="font-size:4rem;padding:.8rem;">🤷</div>
-                <div class="f" style="padding:0 1rem">
-                  <h2>Oops! Nothing found</h2>
-                  <p>The content you are looking for is not here.</p>
-                </div>
+              <style>
+                .hero-box-2 {
+                  margin:.5rem 0;
+                  padding: 1px 2rem 3rem;
+                  background: linear-gradient(45deg, #37b4aa, #b05eef, transparent);
+                  color: #fff;
+                }
+                .hero-box-2 hr { border-color: #cdb8e3 }
+                .hero-box-2 .site-description {
+                  margin-left:5.3rem;
+                  font-weight: 300;
+                  font-size: 1.1em;
+                  color: #000;
+                }
+                ._dark .hero-box-2 .site-description { color: #fff }
+              </style>
+              <div class="hero-box-2 box">
+                <h1 id="_hero-title">⚒️ Heroic Title</h1>
+                <p class="site-description">Your site's description or mission statement.</p>
               </div>
-              <div style="margin-top:3rem"></div>
               <hr/>
-              <p><a class="button text-secondary _bt -flat -l" href="?back" onclick="event.preventDefault();(function(w){var h=w.history;w.opener?w.close():h.length&gt;1?h.back():w.location.href='/';})(window)" title="Back to previous page">👈 Back</a><a class="button text-secondary _bt -flat -l" href="/dove/" title="Go to Home Page">Home</a><a class="button text-secondary _bt -flat -l" href="/dove/pages" title="Go to Pages">Pages</a><a class="button text-secondary _bt -flat -l" href="/dove/posts" title="Go to Posts">Posts</a>
-              </p>
+              <style>
+                .hero-box-1 { padding:0 }
+                .hero-box-1 .site-description {
+                  margin-left:5.3rem;
+                  font-weight: 300;
+                  font-size: 1.1em;
+                }
+                .hero-box-1 .hero-hr { margin-top:45px }
+              </style>
+              <div class="hero-box-1 box">
+                <h1 id="_hero-title">⚒️ Heroic Title</h1>
+                <p class="site-description">Your site's description or mission statement.</p>
+                <hr class="hero-hr"/>
+              </div>
+              <p><code>// content for : Home</code></p>
             </article>
           </main>
           <footer class="_footer">
@@ -58,7 +83,7 @@
               <hr/>
               <p class="text-right text-grey"><small>
                   This site is open source.
-                  <a href="https://github.com/techie-joe/dove/edit/main/_source/core/404.html.pug">Improve this page</a>.</small></p>
+                  <a href="https://github.com/techie-joe/dove/edit/main/_source/core/index.html.pug">Improve this page</a>.</small></p>
             </div>
           </footer>
         </div>
