--- a/prime/404.html
+++ b/prime/404.html
@@ -23,7 +23,7 @@ description: The content you are looking for is not here.
           <div class="container-lg px-3 my-5 markdown-body">
             <header class="_header">
               <div class="_layout">
-                <h1>{% include dove_logo.html %}</h1>
+                <h1>{% include dove/logo.html %}</h1>
               </div>
             </header>
             <nav class="_nav">
@@ -54,7 +54,7 @@ description: The content you are looking for is not here.
                       <p>The content you are looking for is not here.</p>
                     </div>
                   </div><div style="margin-top:3rem"></div>
-                  <hr class="thin"/>{% include nav_common.html %}
+                  <hr class="thin"/>{% include nav_common.md %}
                 </div>
               </article>
             </main>
