--- a/prime/legacy.html
+++ b/prime/legacy.html
@@ -23,7 +23,7 @@ description: A theme development project.
           <div class="container-lg px-3 my-5 markdown-body">
             <header class="_header">
               <div class="_layout">
-                <h1>{% include dove_logo.html %}</h1>
+                <h1>{% include dove/logo.html %}</h1>
               </div>
             </header>
             <nav class="_nav">
@@ -49,7 +49,7 @@ description: A theme development project.
               <article class="_article">
                 <div class="_layout"><p>Text can be <strong>bold</strong>, <em>italic</em>, or <del>strikethrough</del>.</p>
 
-<p><a href="./preview.html">Link to another page</a>.</p>
+<p><a href="preview">Link to another page</a>.</p>
 
 <p>There should be whitespace between paragraphs.</p>
 
