--- a/prime/page.html
+++ b/prime/page.html
@@ -23,7 +23,7 @@ description: A theme development project.
           <div class="container-lg px-3 my-5 markdown-body">
             <header class="_header">
               <div class="_layout">
-                <h1>{% include dove_logo.html %}</h1>
+                <h1>{% include dove/logo.html %}</h1>
               </div>
             </header>
             <nav class="_nav">
