--- a/prime/preview.html
+++ b/prime/preview.html
@@ -23,7 +23,7 @@ description: A theme development project.
           <div class="container-lg px-3 my-5 markdown-body">
             <header class="_header">
               <div class="_layout">
-                <h1>{% include dove_logo.html %}</h1>
+                <h1>{% include dove/logo.html %}</h1>
               </div>
             </header>
             <nav class="_nav">
@@ -46,7 +46,9 @@ description: A theme development project.
             </nav>
             <main class="_main">
               <article class="_article">
-                <div class="_layout"><p class="hero">Hero statement with <span class="text-red">a red text</span> would be exciting</p>
+                <div class="_layout">{% include ui.html %}
+
+<p class="hero">Hero message with <span class="text-red">red text</span> grabs attention</p>
 
 <h1>Heading 1</h1>
 
@@ -59,33 +61,33 @@ description: A theme development project.
 <p class="indent text-justify text-grey"><strong>You'll notice some gibberish text in this demo.</strong> It's simply placeholder content, added to help you visualize how the layout, spacing, and typography will appear once real content is in place. The text itself doesn't carry any meaning, it's just there to fill the empty areas and make the overall design feel balanced and complete. Each line and section tells a “different story”, though none of it is meant to be understood literally. It's more of a creative illusion, a way to showcase how color, contrast, and structure come together to create a theme. It honors the “look and feel”, a metaphor for how design can shift and vary in perspective. That's the beauty of visual design. Every layout tells its own silent story, even when the words themselves mean nothing at all.</p>
 
 <blockquote>
-  <p>Have a look at <a href="./legacy.html">the legacy</a> for the classic demo page.</p>
+  <p>Have a look at <a href="legacy">the legacy</a> for the classic demo page.</p>
 </blockquote>
 
 <hr />
 
-<!-- Comment blocks will not appear on the screen. -->
-<!-- {% comment %} Liquid comments will not be rendered. {% endcomment %} -->
+<hr class="thin" />
 
-<p class="text-justify">There's a <strong>horizontal rule</strong> above this sentence, followed by a <strong>comment block</strong>. Comment blocks will not appear on the screen, and Liquid comments will not be rendered.</p>
-
-<h2>Styling texts</h2>
+<p class="text-justify"><strong>Horizontal rule</strong> can be thick and thin. There are two of them above this sentence.</p>
 
 <ul>
   <li>
-    <p>Text can be
+    <p>
+Text can be
 <strong>bold</strong>,
 <em>italic</em>,
-or <strong><em>both</em></strong>. You can also
-<del>strikethrough</del> texts,
-or add some <code class="language-plaintext highlighter-rouge">code</code>.</p>
+and <strong><em>both</em></strong>.
+You can also add <code class="language-plaintext highlighter-rouge">code</code>
+and <del>strike-through</del> texts.
+    </p>
   </li>
   <li>
-    <p>Use HTML to render
-<u>underline</u>,
-<abbr title="Abbreviation">abbr</abbr>,
-<samp>samp</samp>, and
-<mark>mark</mark>.</p>
+    <p>
+Use HTML to <u>underline</u>, add
+<abbr title="Abbreviation">abbreviation</abbr>,
+<samp>sample</samp>, and
+<mark>mark</mark> texts.
+    </p>
   </li>
   <li>
     <p>Color them 
@@ -104,25 +106,46 @@ or add some <code class="language-plaintext highlighter-rouge">code</code>.</p>
   </li>
 </ul>
 
+<h2 class="h1">Heading 1</h2>
+
+<p class="text-justify">The H1 holds everything together. Usually there is only one per page dedicated for the main title. For styling puposes however, you can mock other heading to look like an H1 using the <code class="language-plaintext highlighter-rouge">h1</code> class.</p>
+
 <h2>Heading 2</h2>
 
-<p class="text-grey">Not too loud, not too small. It's like the middle child of headings: always trying, never crying. H2 organizes sections, but secretly dreams of being an H1 someday. Don't tell it the truth. Let it dream.</p>
+<p class="text-justify text-grey">Not too loud, not too small. It's like the middle child of headings: always trying, never crying. H2 organizes sections, but secretly dreams of being an H1 someday. Don't tell it the truth. Let it dream.</p>
 
 <h3>Heading 3</h3>
 
-<p class="text-grey">The Mysterious H3 is like that friend who wears sunglasses indoors. Mysterious. Cool. A bit unnecessary sometimes, but when used right — chef's kiss! H3 loves details and subtopics. But if you go too deep, suddenly you're in H6 territory, and nobody reads that far.</p>
+<p class="text-justify text-grey">The Mysterious H3 is like that friend who wears sunglasses indoors. Mysterious. Cool. A bit unnecessary sometimes, but when used right — chef's kiss! H3 loves details and subtopics. But if you go too deep, suddenly you're in H6 territory, and nobody reads that far.</p>
 
 <h4>Heading 4</h4>
 
-<p class="text-grey">H4 is forgotten like socks at Christmas. Technically useful, but no one really cheers for it. You'll use it if you have to, like adding extra layers to a report nobody asked for. Poor H4. Always invited, never remembered.</p>
+<p class="text-justify text-grey">H4 is forgotten like socks at Christmas. Technically useful, but no one really cheers for it. You'll use it if you have to, like adding extra layers to a report nobody asked for. Poor H4. Always invited, never remembered.</p>
 
 <h5>Heading 5</h5>
 
-<p class="text-grey">H5 is that tiny notebook you bought to look organized but never actually use. It's small, it's cute, it's there — but honestly, body text is almost the same size, so why bother? H5 knows its fate but accepts it gracefully.</p>
+<p class="text-justify text-grey">H5 is that tiny notebook you bought to look organized but never actually use. It's small, it's cute, it's there — but honestly, body text is almost the same size, so why bother? H5 knows its fate but accepts it gracefully.</p>
 
 <h6>Heading 6</h6>
 
-<p class="text-grey">And then comes H6, the heading so small it whispers. Nobody notices it. Even search engines squint and go, “Wait, is that… a heading?” H6 is like writing a title with invisible ink: only the bravest readers will ever see it.</p>
+<p class="text-justify text-grey">And then comes H6, the heading so small it whispers. Nobody notices it. Even search engines squint and go, “Wait, is that… a heading?” H6 is like writing a title with invisible ink: only the bravest readers will ever see it.</p>
+
+<h2>Styling blockquotes</h2>
+
+<blockquote>
+  <p>This is a blockquote.</p>
+</blockquote>
+
+<blockquote class="border-green">
+  <p>You can add styles to a blockquote.</p>
+  <blockquote class="border-yellow">
+    <p>“You can stack them too.” — <em>Says the Author</em></p>
+  </blockquote>
+</blockquote>
+
+<blockquote class="border-red text-pending">
+  <p>Try other mix as well.</p>
+</blockquote>
 
 <h2>Code blocks</h2>
 
@@ -147,13 +170,13 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
 
 <h2>Including images</h2>
 
-<p><img src="https://techie-joe.github.io/core/images/299-1024x368.jpg" alt="Large image" class="full-width" /></p>
+<p><img src="https://techie-joe.github.io/core/images/299-1024x368.jpg" alt="Large image" class="width-full" /></p>
 
 <blockquote class="text-small mt-0">
   <p>Images for this demo came from <a href="https://picsum.photos/" target="_blank">picsum.photos</a>.</p>
 </blockquote>
 
-<p>Use the <code class="language-plaintext highlighter-rouge">width-full</code> class for large images.</p>
+<p>You can use the <code class="language-plaintext highlighter-rouge">width-full</code> or <code class="language-plaintext highlighter-rouge">width-fit</code> class for images.</p>
 
 <p>For smaller images, align them using floats and margins: <code class="language-plaintext highlighter-rouge">float-left.mr.mb</code>, <code class="language-plaintext highlighter-rouge">float-right.ml.mb</code> or <code class="language-plaintext highlighter-rouge">centered.mb</code>.</p>
 
@@ -165,30 +188,13 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
 
 <hr class="mt-3" />
 
-<h2>Styling blockquotes</h2>
-
-<blockquote>
-  <p>This is a blockquote.</p>
-</blockquote>
-
-<blockquote class="border-green">
-  <p>You can add styles to a blockquote.</p>
-  <blockquote class="border-yellow">
-    <p>“You can stack them too.” — <em>Says the Author</em></p>
-  </blockquote>
-</blockquote>
-
-<blockquote class="border-red text-pending">
-  <p>Try other mix as well.</p>
-</blockquote>
-
 <h2>Box wrappers</h2>
 
-<p class="box ba text-center">Wrap texts in a <code class="language-plaintext highlighter-rouge">box.ba</code></p>
+<p class="box ba ph text-left">Wrap texts in <code class="language-plaintext highlighter-rouge">box.ba</code></p>
 
-<p class="box bg-primary text-white text-center">Wrap in <code class="language-plaintext highlighter-rouge">box.bg-primary.text-white</code></p>
+<p class="box ph bg-primary text-white text-center">Wrap in <code class="language-plaintext highlighter-rouge">box.bg-primary.text-white</code></p>
 
-<p class="box bg-red text-white text-center">Try other mix as well</p>
+<p class="box ph bg-red text-white text-right">Try other mix as well</p>
 
 <h2>Details and summary</h2>
 
@@ -201,7 +207,7 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
 </div>
 </details>
 
-<details class="box ba">
+<details class="box ba ph">
 <summary>Style with <code>box.ba</code>. <i>(click for more)</i></summary>
 <div class="details">
 <p class="text-grey text-justify">This block expands like curtains on opening night, then folds back up as if nothing ever happened, gaslighting your memory of what you just saw. Authors toss long-winded explanations, secret Easter eggs, or poorly formatted cat ASCII art inside it, knowing only the brave will click. In its most chaotic form, the details block nests within itself, collapsing collapsibles within collapsibles until the reader spirals into an abyss of disclosure toggles, wondering whether the summary is summary enough to summarize the summaries.</p>
@@ -258,7 +264,7 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
       <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" />Second level.
         <ul class="task-list">
           <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" checked="checked" />Third level.</li>
-          <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" />Other task.</li>
+          <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" />Third level.</li>
           <li class="task-list-item"><input type="checkbox" class="task-list-item-checkbox" disabled="disabled" />Last task.</li>
         </ul>
       </li>
@@ -286,15 +292,17 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
 <a href="#" onclick="event.preventDefault();" class="button bg-secondary border-secondary text-black">Secondary</a>
 <a href="#" onclick="event.preventDefault();" class="button">Button Link</a>
 <span class="text-gray">&bull;</b>
-<a href="#" onclick="event.preventDefault();theme.change()" class="button text-secondary" title="Change Theme (Alt+T)">Change Theme</a></p>
+<a href="#" onclick="event.preventDefault();theme.change()" class="button" title="Change Theme (Alt+T)">Change Theme</a></p>
 
 <h2>Footnote links</h2>
 
-<p>A footnote<sup id="fnref:1" role="doc-noteref"><a href="#fn:1" class="footnote" rel="footnote">1</a></sup> creates a list of references at the bottom of a page.</p>
+<p>Footnote links are references to the note<sup id="fnref:1" role="doc-noteref"><a href="#fn:1" class="footnote" rel="footnote">1</a></sup> listed at the bottom of a page.</p>
 
-<p>Normally you would use number as reference, you can also use word<sup id="fnref:note" role="doc-noteref"><a href="#fn:note" class="footnote" rel="footnote">2</a></sup> as reference.</p>
+<p>Click the link to see an example<sup id="fnref:2" role="doc-noteref"><a href="#fn:2" class="footnote" rel="footnote">2</a></sup>.</p>
 
-<p>Footnote can also have multiple lines<sup id="fnref:3" role="doc-noteref"><a href="#fn:3" class="footnote" rel="footnote">3</a></sup>.</p>
+<p>Footnote can be written in multiple lines<sup id="fnref:3" role="doc-noteref"><a href="#fn:3" class="footnote" rel="footnote">3</a></sup>.</p>
+
+<p>Normally you would use number as reference, but you can use word<sup id="fnref:note" role="doc-noteref"><a href="#fn:note" class="footnote" rel="footnote">2</a></sup> as well.</p>
 
 <h2>Table styles</h2>
 
@@ -454,15 +462,16 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
 <div class="footnotes" role="doc-endnotes">
   <ol>
     <li id="fn:1" role="doc-endnote">
-      <p>A typical footnote reference contains: The author's name, the article title, and publication details.<br/>
-For example: <em>John Smith</em>, <strong>Modern Web Design</strong> (New York: TechPress, 2023), page 45.<a href="#fnref:1" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
+      <p>A typical footnote contains: <strong>The author's name</strong>, the article title <em>and publication details</em>. <a href="#fnref:1" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
+    </li>
+    <li id="fn:2" role="doc-endnote">
+      <p>For example: <strong>John Smith</strong>, Modern Web Design <em>(New York: TechPress, 2023), page 45</em>. <a href="#fnref:2" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
+    </li>
+    <li id="fn:3" role="doc-endnote">
+      <p>Footnote can be written in multiple lines. <br/>Every new line in footnote should be prefixed with 2 space or 4 space indentation. <a href="#fnref:3" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
     </li>
     <li id="fn:note" role="doc-endnote">
       <p>Named footnotes will still render with numbers instead of the text but allow easier identification and linking. <a href="#fnref:note" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
-    </li>
-    <li id="fn:3" role="doc-endnote">
-      <p>Every new line in footnote should be prefixed:<br/>
-with 2 space or 4 space indentation. <a href="#fnref:3" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
     </li>
   </ol>
 </div>
