fix seconday button style

--- a/prime/preview.html
+++ b/prime/preview.html
@@ -288,7 +288,7 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
 <h2>Button links</h2>
 
 <p>
-<a href="#" onclick="event.preventDefault();" class="button bg-primary text-white">Primary</a>
+<a href="#" onclick="event.preventDefault();" class="button bg-primary text-white border-primary">Primary</a>
 <a href="#" onclick="event.preventDefault();" class="button bg-secondary text-secondary">Secondary</a>
 <a href="#" onclick="event.preventDefault();" class="button">Button Link</a>
 <span class="text-gray">&bull;</b>
