update 404 and prime index

--- a/index.html
+++ b/index.html
@@ -110,6 +110,10 @@ description: A theme development project.
                   <div class="flex" style="gap:3rem">
                     <div id="pages_" style="min-width:250px">
                       <h3 class="mt-0">Pages</h3>{{ pages | markdownify }}
+                      <ul>
+                        <li><a href="404">404</a>
+                        </li>
+                      </ul>
                     </div>
                     <div id="posts_" style="min-width:250px">
                       <h3 class="mt-0">Posts</h3>{{ posts | markdownify }}
