--- a/prime/index.html
+++ b/prime/index.html
@@ -32,24 +32,34 @@ index: false
             </header>
             <nav class="_nav">
               <div class="_layout">
-                <p> <b><b>Prime</b></b>
-<i class="_icon"><i class="isvg">
-                      <svg viewBox="0 0 24 24">
-                        <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
-                      </svg></i></i>
-<a href="/dove/prime/preview.html">Preview</a>
-<i class="_icon"><i class="itext">&bull;</i></i>
-<a href="/dove/prime/home.html">Home</a>
-<a href="/dove/prime/page.html">Page</a>
-<a href="/dove/prime/404.html">404</a>
-                </p>
-                <hr class="thin"/>
               </div>
             </nav>
             <main class="_main">
               <article class="_article">
                 <div class="_layout">
-                  <p><code>// content for : Prime</code></p>
+                  <h1>Prime</h1>
+                  <nav class="mv"><b>Html</b>
+<i class="_icon"><i class="isvg">
+                        <svg viewBox="0 0 24 24">
+                          <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                        </svg></i></i>
+<a href="/dove/prime/preview.html">Preview</a>
+<i class="_icon"><i class="itext">&bull;</i></i>
+<a href="/dove/prime/home.html">Home</a>
+<a href="/dove/prime/page.html">Page</a>
+<a href="/dove/prime/404.html">404</a>
+                  </nav>
+                  <nav class="mv"><b>Markdown</b>
+<i class="_icon"><i class="isvg">
+                        <svg viewBox="0 0 24 24">
+                          <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" fill="currentColor" fill-opacity="1"></path>
+                        </svg></i></i>
+<a href="/dove/prime/md/preview.html">Preview</a>
+<i class="_icon"><i class="itext">&bull;</i></i>
+<a href="/dove/prime/md/home.html">Home</a>
+<a href="/dove/prime/md/page.html">Page</a>
+<a href="/dove/prime/md/404.html">404</a>
+                  </nav>
                 </div>
               </article>
             </main>
