--- a/core/preview.html
+++ b/core/preview.html
@@ -60,7 +60,7 @@ index: false
 <p class="indent text-justify text-grey"><strong>You may notice some gibberish text in this demo.</strong> It's just a placeholder content added to help you visualize how the layout, spacing and typography will appear once real content is in place. The text itself doesn't carry any meaning, it's simply there to fill the empty areas and make the overall design feel balanced and complete. Each line and section tells something, though none of it is meant to be understood literally. It's more of a creative illusion, a way to showcase how color, contrast, and structure come together to create a theme. It honors the “look and feel”, a metaphor for how design can shift and vary in perspective. That's the beauty of visual design. Every layout tells its own silent story, even when the words themselves mean nothing at all.</p>
 
 <blockquote>
-  <p>Open <a href="legacy">the legacy</a> for the classic demo page.</p>
+  <p>Open <a href="legacy">the legacy demo page</a>.</p>
 </blockquote>
 
 <hr />
