update demo links

--- a/mallet/legacy.html
+++ b/mallet/legacy.html
@@ -44,7 +44,7 @@ index: false
           <main class="_main">
             <article class="_article"><p>Text can be <strong>bold</strong>, <em>italic</em>, or <del>strikethrough</del>.</p>
 
-<p>Link <a href="#">to another page</a> and <a href="preview">the new demo page</a>.</p>
+<p><a href="#">Link to another page</a> / <a href="preview">the new demo page</a>.</p>
 
 <p>There should be whitespace between paragraphs.</p>
 
