--- a/mallet/preview.html
+++ b/mallet/preview.html
@@ -165,7 +165,7 @@ Long, single-line `code blocks` should not wrap. They should remain on a single 
 
 <h2>Hyper links</h2>
 
-You can <a href="#">link to another page</a>. But if you link to a missing page, you'll get <a href="{{ site.baseurl }}/404" title="The error page">an error</a>.
+You can <a href="#" onclick="event.preventDefault();">link to another page</a>. But if you link to a missing page, you'll get <a href="{{ site.baseurl }}/404" title="The error page">an error</a>.
 
 <h2>Button links</h2>
 
