--- a/prime/legacy.html
+++ b/prime/legacy.html
@@ -51,7 +51,7 @@ index: false
               <article class="_article">
                 <div class="_layout"><p>Text can be <strong>bold</strong>, <em>italic</em>, or <del>strikethrough</del>.</p>
 
-<p><a href="#">Link to another page</a> / <a href="preview">the new demo page</a>.</p>
+<p><a href="#" onclick="event.preventDefault();">Link to another page</a> / <a href="preview">the new demo page</a>.</p>
 
 <p>There should be whitespace between paragraphs.</p>
 
