--- a/nova/legacy.html
+++ b/nova/legacy.html
@@ -48,7 +48,7 @@ index: false
           <main class="_main">
             <article class="_article _layoutx _960"><p>Text can be <strong>bold</strong>, <em>italic</em>, or <del>strikethrough</del>.</p>
 
-<p><a href="#">Link to another page</a> / <a href="preview">the new demo page</a>.</p>
+<p><a href="#" onclick="event.preventDefault();">Link to another page</a> / <a href="preview">the new demo page</a>.</p>
 
 <p>There should be whitespace between paragraphs.</p>
 
