update foot notes links

--- a/mallet/preview.html
+++ b/mallet/preview.html
@@ -178,13 +178,13 @@ You can <a href="#" onclick="event.preventDefault();">link to another page</a>. 
 
 <h2>Footnote links</h2>
 
-<p>Footnote links are references to the note<sup id="fnref:1" role="doc-noteref"><a href="#fn:1" class="footnote" rel="footnote">1</a></sup> listed at the bottom of a page.</p>
+<p>Footnote links are references to the notes<sup id="fnref:1" role="doc-noteref"><a href="#fn:1" class="footnote" rel="footnote">1</a></sup> listed at the bottom of a page.</p>
 
 <p>Click the link to see an example<sup id="fnref:2" role="doc-noteref"><a href="#fn:2" class="footnote" rel="footnote">2</a></sup>.</p>
 
 <p>Footnote can be written in multiple lines<sup id="fnref:3" role="doc-noteref"><a href="#fn:3" class="footnote" rel="footnote">3</a></sup>.</p>
 
-<p>Normally you would use number as reference, but you can use word<sup id="fnref:note" role="doc-noteref"><a href="#fn:note" class="footnote" rel="footnote">2</a></sup> as well.</p>
+<p>Normally you would use number as reference, but you can use word<sup id="fnref:note" role="doc-noteref"><a href="#fn:note" class="footnote" rel="footnote">4</a></sup> as well.</p>
 
 <h2>Including images</h2>
 
