--- a/prime/404.html
+++ b/prime/404.html
@@ -49,14 +49,7 @@ index: false
             <main class="_main">
               <article class="_article">
                 <div class="_layout">
-                  <div class="flex" style="margin:1rem auto 3rem auto">
-                    <div class="fit" style="font-size:4rem;padding:.8rem;">🤷</div>
-                    <div class="f" style="padding:0 1rem">
-                      <h2>Oops! Nothing found</h2>
-                      <p>The content you are looking for is not here.</p>
-                    </div>
-                  </div><div style="margin-top:3rem"></div>
-                  <hr class="thin"/>{% include nav_common.md %}
+{%- include 404.md %}
                 </div>
               </article>
             </main>
